Add link to repo

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<div class="about" id="about">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeAbout()">&times;</a>
 		<p>This project was created by <a href="https://linkedin.com/in/derwaan">Julien Gomez</a> (<a href="https://github.com/Derwaan">@Derwaan</a>).</p>
-		<p>The source of this project can be found <a href="#">here</a>.</p>
+		<p>The source of this project can be found <a href="https://github.com/derwaan/curry-banana">here</a>.</p>
 	</div>
 
 	<body>
