Add stop function

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,10 @@
 		</p>
 
 		<a href="javascript:void(0)" class="button button-primary" id="launch_button">Launch</a>
-		<a href="javascript:void(0)" class="button button-alert" id="stop_button">Stop</a>
+		<a href="javascript:void(0)" class="button button-alert" id="pause_button">Pause</a>
 		<a href="javascript:void(0)" class="button button-primary" id="break_button" data-jq-dropdown="#break_options">Break</a>
-		<a href="javascript:void(0)" class="button button-success" id="relaunch_button">Restart</a>
+		<a href="javascript:void(0)" class="button button-primary" id="relaunch_button">Restart</a>
+		<a href="javascript:void(0)" class="button button-alert" id="stop_button">Stop</a>
 
 	</div>
 
