Add cookies et remove reward
TODO: Fix remove multiple rewards

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
 			crossorigin="anonymous" defer></script>
 		<script src="js/navigation.js" defer></script>
 		<script src="js/timer.js" defer></script>
+		<script src="js/reward.js" defer></script>
 		<script type="text/javascript" src="js/jquery.dropdown.min.js" defer></script>
+		<script type="text/javascript" src="js/js.cookie.js" defer></script>
 	</head>
 
 	<body>
@@ -24,21 +26,6 @@
 		<a href="javascript:void(0)" class="close_button" id="close_rewards">&times;</a>
 		<h1>Rewards</h1>
 		<ul id="rewards">
-			<li>
-				Eat a delicious snack <a href="javascript:void(0)">x</a>
-			</li>
-			<li>
-				Watch an episode of your favorite show <a href="javascript:void(0)">x</a>
-			</li>
-			<li>
-				Tonight, relax in front of a movie <a href="javascript:void(0)">x</a>
-			</li>
-			<li>
-				You got 5 minutes on social media. Go ! <a href="javascript:void(0)">x</a>
-			</li>
-			<li>
-				For your next break, get 15 more minutes <a href="javascript:void(0)">x</a>
-			</li>
 		</ul>
 	</div>
 
