Add add function to reward
Add eslint

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 		<h1>Rewards</h1>
 		<ul id="rewards">
 		</ul>
+		<input type="text" id="add_reward" placeholder="Add a reward...">
 	</div>
 
 	<!-- ABOUT PANEL -->
