--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 			</a>
 		</li>
 		<li class="brand">
-			<a href="#"><span>Curry</span> Banana</a>
+			<a href="#"><span>Curry</span> Banana<i>Beta</i></a>
 		</li>
 		<li class="right" id="open_about">
 			<a href="javascript:void(0)">
