Add Contact panel

--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,20 @@
 	<div id="about_panel">
 		<a href="javascript:void(0)" class="close_button" id="close_about">&times;</a>
 		<p>
-			This project was created by <a href="https://linkedin.com/in/derwaan">Julien Gomez</a> (<a href="https://github.com/Derwaan">@Derwaan</a>).</p>
+			This project was created by <a href="https://linkedin.com/in/derwaan">Julien Gomez</a> (<a href="https://twitter.com/Derwaan">@Derwaan</a>).</p>
 		<p>
 			The source of this project can be found <a href="https://github.com/derwaan/curry-banana">here</a>.
 		</p>
+	</div>
+
+	<div id="contact_panel">
+		<p class="header">Got a remark ?</p>
+		<div class="form">
+			<p>Send an email to <a href="mailto:derwaan@gmail.com?subject=Remark on Curry-Banana">Derwaan</a> with your remarks.</p>
+			<p>Feel free to send a feedback on Twitter to <a href="https://twitter.com/Derwaan">@Derwaan</a>.</p>
+			<p>You are a coder ? Participate to the project on <a href="https://github.com/derwaan/curry-banana">Github</a>!</p>
+			<p class="thanks">Thank you !</p>
+		</div>
 	</div>
 
 	<!-- MENU -->
