--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 		<script src="js/navigation.js" defer></script>
 		<script src="js/timer.js" defer></script>
 		<script src="js/reward.js" defer></script>
+		<script src="js/notification.js" defer></script>
 	</head>
 
 	<body>
